...
    },
  );

  String _getLanguageDisplayName(AppLocale locale) {
    switch (locale) {
      case AppLocale.en:
        return 'English';
      case AppLocale.sv:
        return 'Svenska';
      case AppLocale.fr:
        return 'Français';
      case AppLocale.it:
        return 'Italiano';
...
        return 'Dansk';
      case AppLocale.nb:
        return 'Norsk bokmål';
      case AppLocale.bg:
        return 'Български';
      case AppLocale.tr:
        return 'Türkçe';
      case AppLocale.az:
        return 'Azərbaycanca';
      case AppLocale.kk:
        return 'Қазақша';
      case AppLocale.uz:
        return 'Oʻzbekcha';
    }
  }

  void _restartApp(BuildContext context) {
    Navigator.of(context, rootNavigator: true).pushNamedAndRemoveUntil('/', (route) => false);
  }
...
